--- a/css/global.css
+++ b/css/global.css
@@ -52,7 +52,7 @@ table {
 }
 
 body {
-    background-image: url(/images/homepage/bg/rome-02.jpg);
+    background-color: #000;
     font-family: Helvetica, sans-serif;
     color: #FFF;
     font-size: 12px;
@@ -62,9 +62,10 @@ body {
 
 .background-image {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	background-repeat: no-repeat;
     background-size: 100%;
+    display: none;
 }
 
 h1 {
