--- a/css/global.css
+++ b/css/global.css
@@ -66,6 +66,13 @@ body {
 	background-repeat: no-repeat;
     background-size: 100%;
     display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.foreground {
+	z-index: 100;
 }
 
 h1 {
