--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 
-@import url('https://fonts.googleapis.com/css?family=Quintessential');
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -53,11 +53,12 @@ table {
 
 body {
     background-color: #000;
-    font-family: Helvetica, sans-serif;
+    font-family: Quicksand, sans-serif;
     color: #FFF;
     font-size: 12px;
     background-repeat: no-repeat;
     background-size: cover;
+    text-transform: lowercase;
 }
 
 .background-image {
@@ -79,10 +80,41 @@ body {
 	display: block;
 }
 
-h1 {
-	font-family: Quintessential;
-	font-size: 20rem;
-    text-shadow: 10px 8px #9a9695;
+.text-container {
+	z-index: 1000;
+	color: #fff;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    text-shadow: 0 0 20px #999;
 }
 
+h1 {
+	font-size: 7rem;
+	margin-left: -8px;
+}
 
+h2 {
+	font-size: 2em;
+	margin-top: 2vh;
+}
+
+ul {
+	margin-top: 2vh;
+}
+
+li {
+	margin-top: 5px;
+}
+
+a, a:active, a:visited, a:hover, a:focus {
+	font-size: 1.5em;
+	color: #fff;
+	text-shadow: 0 0 5px #999;
+	text-decoration: none;
+	letter-spacing: .9px;
+}
+
+a:hover {
+	text-decoration: underline;
+}
