--- a/css/global.css
+++ b/css/global.css
@@ -89,6 +89,19 @@ body {
     text-shadow: 0 0 20px #999;
 }
 
+.gradient {
+	position: absolute;
+	z-index: 10000;
+	width: 100%;
+	top: 485px;
+	left: 0;
+	height: 200px;
+	background: -webkit-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,1)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,1)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,1)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)); /* Standard syntax (must be last) */
+}
+
 h1 {
 	font-size: 7rem;
 	margin-left: -8px;
